apps/gatus/overlays/staging/gatus.yaml
---
# Source: gatus/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gatus
  namespace: gatus-staging
  labels:
    helm.sh/chart: gatus-1.4.4
    app.kubernetes.io/name: gatus
    app.kubernetes.io/instance: gatus
    app.kubernetes.io/version: "v5.27.2"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: gatus
    app.kubernetes.io/instance: gatus
---
# Source: gatus/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatus
  namespace: gatus-staging
  labels:
    helm.sh/chart: gatus-1.4.4
    app.kubernetes.io/name: gatus
    app.kubernetes.io/instance: gatus
    app.kubernetes.io/version: "v5.27.2"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: gatus
      app.kubernetes.io/instance: gatus
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gatus
        app.kubernetes.io/instance: gatus
      annotations:
        checksum/config: 7a5576eb3192aa28dba4b6971b1bcc849a17e602196c6a538b8851059608a4c6
    spec:
      
      serviceAccountName: default
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 65534
      containers:
        - name: gatus
          securityContext:
            readOnlyRootFilesystem: true
            runAsGroup: 65534
            runAsNonRoot: true
            runAsUser: 65534
          image: "twinproduction/gatus:v5.27.2"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /health
              port: http
          livenessProbe:
            httpGet:
              path: /health
              port: http
          resources:
            {}
          volumeMounts:
            - name: gatus-config
              mountPath: /config
              readOnly: true
            - name: gatus-data
              mountPath: /data
      volumes:
        - name: gatus-config
          configMap:
            name: gatus
        - name: gatus-data
          persistentVolumeClaim:
            claimName: gatus
